Se simplifica todo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/public/styles/home.css">
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
     <header>
@@ -36,133 +36,133 @@
             <div class="slide-track">
 
                 <div class="slide">
-                    <img src="/public/icons/vscode.png" alt="">
+                    <img src="./icons/vscode.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/html.png" alt="">
+                    <img src="./icons/html.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/css.png" alt="">
+                    <img src="./icons/css.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/javascript.png" alt="">
+                    <img src="./icons/javascript.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/express-js.png" alt="">
+                    <img src="./icons/express-js.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/node.png" alt="">
+                    <img src="./icons/node.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/python.png" alt="">
+                    <img src="./icons/python.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/git.png" alt="">
+                    <img src="./icons/git.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/github.png" alt="">
+                    <img src="./icons/github.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/top.png" alt="">
+                    <img src="./icons/top.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/figma.png" alt="">
+                    <img src="./icons/figma.png" alt="">
                 </div>
                 <div class="slide">
-                    <img src="/public/icons/vscode.png" alt="">
-                </div>
-
-                <div class="slide">
-                    <img src="/public/icons/html.png" alt="">
+                    <img src="./icons/vscode.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/css.png" alt="">
+                    <img src="./icons/html.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/javascript.png" alt="">
+                    <img src="./icons/css.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/express-js.png" alt="">
+                    <img src="./icons/javascript.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/node.png" alt="">
+                    <img src="./icons/express-js.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/python.png" alt="">
+                    <img src="./icons/node.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/git.png" alt="">
+                    <img src="./icons/python.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/github.png" alt="">
+                    <img src="./icons/git.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/top.png" alt="">
+                    <img src="./icons/github.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/figma.png" alt="">
-                </div>
-                <div class="slide">
-                    <img src="/public/icons/vscode.png" alt="">
+                    <img src="./icons/top.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/html.png" alt="">
+                    <img src="./icons/figma.png" alt="">
+                </div>
+                <div class="slide">
+                    <img src="./icons/vscode.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/css.png" alt="">
+                    <img src="./icons/html.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/javascript.png" alt="">
+                    <img src="./icons/css.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/express-js.png" alt="">
+                    <img src="./icons/javascript.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/node.png" alt="">
+                    <img src="./icons/express-js.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/python.png" alt="">
+                    <img src="./icons/node.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/git.png" alt="">
+                    <img src="./icons/python.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/github.png" alt="">
+                    <img src="./icons/git.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/top.png" alt="">
+                    <img src="./icons/github.png" alt="">
                 </div>
 
                 <div class="slide">
-                    <img src="/public/icons/figma.png" alt="">
+                    <img src="./icons/top.png" alt="">
+                </div>
+
+                <div class="slide">
+                    <img src="./icons/figma.png" alt="">
                 </div>
                 
             </div>
@@ -263,7 +263,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <div class="section">
             <div class="content-card">
                 <div class="card">
-                    <img src="/public/img/crud1.jpg" alt="">
+                    <img src="./img/crud1.jpg" alt="">
                     <h1>CRUD de tareas</h1>
                     <p>Puedes agregar y eliminar tareas las cuales se guardan en un array sin usar base de datos.</p>
                     <a href="https://github.com/danycomill/crud-tareas">Ver mas</a>
@@ -271,7 +271,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
                 <div class="card">
-                    <img src="/public/img/crud2.jpg" alt="">
+                    <img src="./img/crud2.jpg" alt="">
                     <h1>CRUD de productos para e-comerce</h1>
                     <p>Agrega, edita, elimina y vusualiza productos. podras hacer click sobre el producto agregado para visualizarlo en una pantalla de detalle donde puedes comprarlo</p>
                     <a href="https://github.com/danycomill/ecomerce-crud">Ver mas</a>
@@ -279,7 +279,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
                 <div class="card">
-                    <img src="/public/img/bicis.jpg" alt="">
+                    <img src="./img/bicis.jpg" alt="">
                     <h1>BiciComerce</h1>
                     <p>Logica en JavaScript para un comercio de bicicletas que te permitehacer 5 filtros diferentes</p>
                     <a href="https://github.com/danycomill/Bici-comerce">Ver mas</a>
@@ -287,7 +287,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
                 <div class="card">
-                    <img src="/public/img/propit.jpg" alt="">
+                    <img src="./img/propit.jpg" alt="">
                     <h1>Propit</h1>
                     <p>Front-End de pagina para comercio de propiedades por porcentaje. Home, Login y registro de usuarios</p>
                     <a href="https://github.com/danycomill/propytech">Ver mas</a>
@@ -295,7 +295,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
                 <div class="card">
-                    <img src="/public/img/expresify.jpg" alt="">
+                    <img src="./img/expresify.jpg" alt="">
                     <h1>Expresify</h1>
                     <p>Front-End de pagina donde se conectan proveedores y comerciantes para realizar dropshipping o importaciones y exportaciones</p>
                     <a href="https://github.com/danycomill/expresify">Ver mas</a>
@@ -303,7 +303,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
                 <div class="card">
-                    <img src="/public/img/gind.jpg" alt="">
+                    <img src="./img/gind.jpg" alt="">
                     <h1>GrindingCofee</h1>
                     <p>Aplicacion completa hecha en un equipo de 5 personas. En esta app, puedes comprar cafe de diferentes marcas. Front-end y Back-end con bases de datos</p>
                     <a href="https://github.com/imjonslz/grupo_9_GrindingCoffee">Ver mas</a>
@@ -331,7 +331,7 @@ Soy un viajero y aventurero que disfruta la soledad no por elección, sino por c
         <div class="section">
             <div class="content-card">
                 <div class="card">
-                    <img src="/public/img/poema1.jpg" alt="">
+                    <img src="./img/poema1.jpg" alt="">
                     <h1>Por si algo me pasa (Pequeña historia)</h1>
                     <p> versos revelan lucha, luz entre sombras, alma sellada en letras.</p>
                     <a href="https://expresify.my.canva.site/por-si-algo-me-pasa-recuerda-estas-palabras">Ver mas</a>
