Se agrego imagen nueva y tambien se modifico el ajuste a pantalla

--- a/index.html
+++ b/index.html
@@ -23,10 +23,19 @@
 
         <section class="header-print">
 
-            <div>
-                <h1>Daniel Contreras Millan SFT.DEV</h1>
-                <p>Desarrollador de software especializado en Python... Escritor ocasional y diseñador UI / UX</p>
-            </div>
+            
+                <div class="prints">
+                    <div class="texts">
+                        <h1>Daniel Contreras Millan</h1>
+                        <p>Desarrollador de software especializado en Python... Escritor ocasional y diseñador UI / UX</p>
+                    </div>
+                    <div class="photo">
+                        <img src="./img/Daniel.jpg" alt="">
+                    </div>
+                </div>
+                <!-- <div class="photo">
+                    <img src="./img/Daniel.jpg" alt="">
+                </div> -->
 
         </section>
     </header>
