Se cambia errores ortograficos

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 <div class="card">
                     <img src="./img/expresify.jpg" alt="">
                     <h1>Expresify</h1>
-                    <p>Expresify conecta proveedores de productos con gente que los quiera comercializar. Importadores con exportadores. Esta StartUp fue idea mia y de un amigo. Pronto vimos el potencial que tiene y actualmente trabajamos muy duro en ello para poderlo hacer realidad muy pronto</p>
+                    <p>Expresify conecta proveedores de productos con gente que los quiera comercializar. Importadores con exportadores. Esta StartUp fue ideada junto a un amigo. Pronto vimos el potencial que tiene y actualmente trabajamos muy duro en ello para poderlo hacer realidad muy pronto</p>
                     <a href="https://github.com/danycomill/expresify">Ver mas</a>
                 </div>
 
