--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="prints">
                     <div class="texts">
                         <h1>Daniel Contreras Millan</h1>
-                        <p>Programador Full Stack, Estudiante de CiberSeguridad, apasionado del emprendimiento y la tecnologia, Escritor ocasional y diseñador UI / UX</p>
+                        <p>Tengo 20 años y soy Emprendedor Digital especializado en Marketing y Programacion. He comenzado varios emprendimientos en internet entre los cuales destaca Expresify que es una plataforma de comercio internacional para conectar importadores con exportadores. tambien fui fundador y CEO de SOBLOWE, plataforma de inteligencia artificial que ayuda a deducir el futuro precio de los mercados fianancieros. la plataforma SOBLOWE fue  cerrada debido a falta de aspectos legales para su funcionamiento</p>
                     </div>
                     <div class="photo">
                         <img src="./img/Daniel.jpg" alt="">
